# python-narrative

./: .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: dependabot-autoapprove.yaml  pypi-publish.yml  pypi-test-publish.yml  python-ci.yml  python-lint.yml
narrative/: __init__.py
src/narrative/: __init__.py
tests/: test_narrative.py
