[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "narrative"
version = "1.1.0"
description = "A small Python package for splitting text into dialogue and narrative."
authors = ["David L. Day <david@davidlday.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2"
importlib-metadata = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
black = "^22.12.0"

