[tool.commitizen]
version = "1.1.2"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_files = [
  "pyproject.toml:version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "narrative"
version = "1.1.2"
description = "A small Python package for splitting text into dialogue and narrative."
authors = ["David L. Day <david@davidlday.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/prosegrinder/python-narrative"
repository = "https://github.com/prosegrinder/python-narrative"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[tool.poetry.dependencies]
python = "^3.7.2"
importlib-metadata = ">=5.1,<7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
black = "^22.12.0"

